fixing GetChildren
